tests/ui/error-codes/E0199.rs
#![feature(negative_impls)]

struct Foo;

trait Bar { }
unsafe impl Bar for Foo { } //~ ERROR implementing the trait `Bar` is not unsafe [E0199]

fn main() {
}
